--- a/index.html
+++ b/index.html
@@ -142,12 +142,10 @@
                 </div>
 
                 <div>
-                    <label class="block text-xs text-neutral-500 mb-2 uppercase tracking-wider">AI 模型</label>
+                    <label class="block text-xs text-neutral-500 mb-2 uppercase tracking-wider">AI 生图模型</label>
                     <select id="aiModel" class="w-full bg-black border border-neutral-700 p-3 text-white focus:border-white transition-colors text-sm">
                         <option value="gemini-3-pro-image-preview">Nano Banana Pro (Gemini 3)</option>
-                        <option value="gemini-2-flash-exp-image-generation">Nano Banana Flash (Gemini 2)</option>
-                        <option value="z-image">Z-image (最新)</option>
-                        <option value="qwen">Qwen (通义千问)</option>
+                        <option value="qwen-image">Qwen-Image (通义千问)</option>
                     </select>
                 </div>
 
@@ -222,9 +220,9 @@
                     使用说明
                 </p>
                 <p>• 点击分镜框可放大查看，再次点击关闭</p>
-                <p>• Z-image 和 Qwen 为最新大模型</p>
+                <p>• Nano Banana Pro: 谷歌 Gemini 3 图像生成模型</p>
+                <p>• Qwen-Image: 阿里通义千问图像生成模型</p>
                 <p>• 统一风格：粗黑轮廓线 + 强烈明暗对比</p>
-                <p>• 所有模型并行生成，速度更快</p>
             </div>
         </div>
 
@@ -246,15 +244,21 @@
         let isGenerating = false;
         let activeCard = null;
 
-        // 统一的风格提示词
+        // 统一的风格提示词（基于参考图风格）
         const STYLE_PROMPT = `Rough black-and-white storyboard sketches, heavy and bold black outlines, strong light and shadow contrast, high-contrast shadows, loose gesture lines, cinematic composition, film aesthetics, Photoshop brush texture, quick sketch style, dramatic light and shadow separation`;
 
         // 模型配置
         const MODEL_CONFIG = {
-            'gemini-3-pro-image-preview': { name: 'Nano Banana Pro', timeout: 120000 },
-            'gemini-2-flash-exp-image-generation': { name: 'Nano Banana Flash', timeout: 60000 },
-            'z-image': { name: 'Z-image', timeout: 120000 },
-            'qwen': { name: 'Qwen', timeout: 120000 }
+            'gemini-3-pro-image-preview': { 
+                name: 'Nano Banana Pro', 
+                timeout: 120000,
+                description: '谷歌 Gemini 3 图像生成'
+            },
+            'qwen-image': { 
+                name: 'Qwen-Image', 
+                timeout: 120000,
+                description: '阿里通义千问图像生成'
+            }
         };
 
         function loadExample() {
